[package]
name = "minecraft-command-types"
version = "0.1.0"
edition = "2024"

[dependencies]
nonempty = "0.12.0"
itertools = "0.14.0"
ordered-float = "5.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
minecraft-command-types_proc-macros = { path = "minecraft-command-types_proc-macros" }
