[package]
name = "minecraft-command-types"
version = "0.1.0"
edition = "2024"
description = "Provides an AST like structure for Minecraft commands."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RevolvingMadness/minecraft-command-types"
keywords = ["minecraft", "ast", "command", "datapack"]
categories = ["data-structures"]

[dependencies]
nonempty = "0.12.0"
itertools = "0.14.0"
ordered-float = "5.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
minecraft-command-types_derive = { path = "minecraft-command-types_derive" }

[[example]]
name = "datapack"
